# cmake_cpp_example

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  overlay-patched.nix  overlay.nix  release.nix  shell.nix
a/: CMakeLists.txt  default.nix  main.cpp
a/d/: CMakeLists.txt  main.cpp
a/d/include/: d.hpp
a/include/: a.hpp
app/: CMakeLists.txt  default.nix  main.cpp
b/: CMakeLists.txt  default.nix  main.cpp
b/include/: b.hpp
c/: CMakeLists.txt  default.nix  main.cpp
c/include/: c.hpp
d/: CMakeLists.txt  default.nix
nix/: sources.json
